syntax = "proto3";

package klibisz.elastiknn;

option java_package = "com.klibisz.elastiknn";

enum Distance {
    DISTANCE_INVALID = 0;
    DISTANCE_L1 = 1;
    DISTANCE_L2 = 2;
    DISTANCE_ANGULAR = 3;
    DISTANCE_HAMMING = 4;
    DISTANCE_JACCARD = 5;
}

message ProcessorOptions {
    // Path to the field where the raw floating-point vector is stored.
    string field_raw = 1;
    // Path to the field where the processed version of the vector is stored.
    string field_processed = 2;
    // Dimensionality of the raw floating-point vector.
    int32 dimension = 3;
    // The distance function used for queries. This has to be given up-front as it determines how the vector gets processed.
    Distance distance = 4;
    // The model used for searching. LSHModel applied for both regular and multi-probe LSH.
    oneof model {
        ExactModel exact = 5;
        LSHModel lsh = 6;
    }
}

message ExactModel {}

message LSHModel {
    int32 k = 1;
    int32 L = 2;
}